# mgx-ai

./: .bandit  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  BACKEND_PR_BODY.md  BACKEND_README.md  BEFORE_AFTER_ANALYSIS.md  BRANCH_PROTECTION_SETUP.md  CHANGES_SUMMARY.md  CODE_REVIEW_REPORT.md  COMPONENT_STATUS.md  COMPREHENSIVE_TEST_REPORT.md  DATABASE_SCHEMA_COMPLETE.md  DATABASE_SCHEMA_GUIDE.md  DEEPSITE_BACKEND_TEST.md  DOCKER_DEPLOYMENT.md  DOCKER_FIX_SUMMARY.md  DOCKER_SERVICES_STATUS.md  DOCKER_SERVICES_SUMMARY.md  Dockerfile  EVENT_CONTRACTS.md  FINAL_REPORT.md  FINAL_STATUS.md  FRONTEND_CHANGES_STATUS.md  FRONTEND_PR_BODY.md  FRONTEND_SUBMODULE_UPDATE.md  FRONTEND_UPDATES_SUMMARY.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MGX_AI_PHASE1_AUDIT_REPORT.md  MGX_AI_PHASE2_AUDIT_REPORT.md  MULTI_LLM_CHAT_TEST_GUIDE.md  PHASE1_AUDIT_SUMMARY.md  PHASE1_DELIVERABLES_SUMMARY.md  PHASE1_IMPLEMENTATION_STATUS.md  PHASE1_README.md  PHASE1_SUMMARY.md  (+48 more)
.github/: dependabot.yml
.venv_new/: pyvenv.cfg
backend/: .bandit.yaml  .gitignore  AGENT_CORE_IMPLEMENTATION.md  BACKEND_README.md  CODE_REVIEW_INDEX.md  CURRENT_STATUS_SUMMARY.txt  DEPLOYMENT_TESTING_IMPLEMENTATION_SUMMARY.md  Dockerfile  FINAL_TEST_REPORT.md  GIT_AWARE_EXECUTION_SUMMARY.md  IMPROVEMENT_GUIDE.md  INTEGRATION_TEST_REPORT.md  NEXT_PHASE_ROADMAP.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PERFORMANCE_REPORT.md  PHASE1_COMPLETE.txt  PHASE1_IMPLEMENTATION_REPORT.md  PHASE2_MODULARIZATION_REPORT.md  PHASE4_COMPLETION_SUMMARY.md  PHASE_10_11_IMPLEMENTATION.md  PHASE_10_IMPLEMENTATION_CHECKLIST.md  PHASE_11_COMPLETION_SUMMARY.md  PHASE_8_2_COMPLETION_SUMMARY.md  alembic.ini  (+23 more)
(+689 files in other folders)
